[gd_scene load_steps=5 format=3 uid="uid://b15uwd8t0h7l6"]

[ext_resource type="Script" uid="uid://d2uxato2ejtmt" path="res://scenes/objects/weevil.gd" id="1_fmxjc"]
[ext_resource type="PackedScene" uid="uid://boreq306q7mmn" path="res://scenes/objects/hazard_box.tscn" id="2_kris8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrsf8"]
size = Vector2(20, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g4ar"]
size = Vector2(22, 16)

[node name="Weevil" type="Area2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_fmxjc")

[node name="WeevilCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rrsf8")

[node name="WeevilSprite" type="ColorRect" parent="."]
offset_left = -11.0
offset_top = -8.0
offset_right = 11.0
offset_bottom = 8.0
color = Color(0.892629, 0.190059, 0, 1)

[node name="WeevilSprite2" type="ColorRect" parent="."]
offset_left = 7.0
offset_top = -3.0
offset_right = 11.0
offset_bottom = 3.0
color = Color(1, 0.45672, 0.344682, 1)

[node name="WeevilRaycast" type="RayCast2D" parent="."]
position = Vector2(12, 1)
target_position = Vector2(0, 9)

[node name="HazardBox" parent="." instance=ExtResource("2_kris8")]
position = Vector2(0, 0)

[node name="CollisionShape2D" parent="HazardBox" index="0"]
shape = SubResource("RectangleShape2D_4g4ar")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[editable path="HazardBox"]
